apps/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: gotify
  ports:
    - name: http
      port: 8090
      targetPort: 80
      protocol: TCP
